Wrong/Missleading hint texts in material assignment #31374

Closed
opened 2012-05-08 23:39:04 +02:00 by Gaia Clary · 9 comments
Member

%%%I believe that the text hints are wrong in the material assignment buttons:

current : "Assign the material in the selected material slot to the selected vertices"
propose: "Assign selected material slot to selected faces"

current : "Select vertices assigned to the selected material slot"
propose: "Select faces assigned to the selected material slot"

current : "Deselect vertices assigned to the selected material slot"
propose: "Deselect faces assigned to the selected material slot"

patch attached.%%%

%%%I believe that the text hints are wrong in the material assignment buttons: current : "Assign the material in the selected material slot to the selected vertices" propose: "Assign selected material slot to selected faces" current : "Select vertices assigned to the selected material slot" propose: "Select faces assigned to the selected material slot" current : "Deselect vertices assigned to the selected material slot" propose: "Deselect faces assigned to the selected material slot" patch attached.%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Way better!

But isn't there still a logical flaw? The button does not assign a material SLOT, but a MATERIAL etc.%%%

%%%Way better! But isn't there still a logical flaw? The button does not assign a material SLOT, but a MATERIAL etc.%%%
Author
Member

%%%So what about this ?

"Assign selected material to selected faces"
"Select all faces assigned to selected material"
"Deselect all faces assigned to selected material"

I am not sure if this isn't even better as it avoids the double usage of "select"

"Assign active material to selected faces"
"Select faces assigned to active material"
"Deselect faces assigned to active material"

but i do not know if the term "active material" is senseful.%%%

%%%So what about this ? "Assign selected material to selected faces" "Select all faces assigned to selected material" "Deselect all faces assigned to selected material" I am not sure if this isn't even better as it avoids the double usage of "select" "Assign active material to selected faces" "Select faces assigned to active material" "Deselect faces assigned to active material" but i do not know if the term "active material" is senseful.%%%

%%%I’d say you can commit the latest versions (with “active material”), it’s short, nice, meaningful, and way better than current ones!%%%

%%%I’d say you can commit the latest versions (with “active material”), it’s short, nice, meaningful, and way better than current ones!%%%
Author
Member

%%%I created a patch for this:

"Assign active material to selected faces"
"Select faces assigned to active material"
"Deselect faces assigned to active material"

%%%

%%%I created a patch for this: "Assign active material to selected faces" "Select faces assigned to active material" "Deselect faces assigned to active material" %%%

%%%Hey Gaia, you do have commit access to the SVN, right? Then commit! :)

Patch looks good to me. If you are unsure, ask on irc, but for such small & safe fixes, it’s OK to commit.%%%

%%%Hey Gaia, you do have commit access to the SVN, right? Then commit! :) Patch looks good to me. If you are unsure, ask on irc, but for such small & safe fixes, it’s OK to commit.%%%
Author
Member

%%%After some discussion with sergey- the final version is Committed ( revision 46478 )
%%%

%%%After some discussion with sergey- the final version is Committed ( revision 46478 ) %%%
Author
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

%%%And fixed again (as clarified with Daniel Salazar & Campbell Barton) in revision: 46480%%%

%%%And fixed again (as clarified with Daniel Salazar & Campbell Barton) in revision: 46480%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31374
No description provided.