fix: #31374 Wrong/Missleading hint texts in material assignment.